fix: remove text align center

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -372,7 +372,6 @@ ul.socials {
 .project-text {
   max-width: 60%;
   display: flex;
-  text-align: center;
   flex-direction: column;
 }
 
